# fishword

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json
catalog/: catalog.json  cet4-qwerty.jsonl  cet6-qwerty.jsonl  cet6.jsonl  ielts-qwerty.jsonl  oxford3000.jsonl  qwerty-ai-machine-learning.jsonl  qwerty-gre.jsonl  qwerty-sat.jsonl  (+6 more)
crates/fishword-cli/: Cargo.toml
crates/fishword-cli/fixtures/: protocol_card_list_sample.json  protocol_rate_sample.json  protocol_stats_sample.json  protocol_status_sample.json
crates/fishword-cli/src/: args.rs  main.rs  protocol.rs  util.rs
crates/fishword-cli/src/cmd/: card.rs  catalog.rs  deck.rs  import.rs  init.rs  mod.rs  rate.rs  review.rs  scope.rs
crates/fishword-cli/tests/: import.rs  json_errors.rs  output_contract.rs
crates/fishword-core/: Cargo.toml
crates/fishword-core/fixtures/: anki_sample.tsv  deck_v1_sample.jsonl  minimal_words.csv  protocol_card_list_sample.json  protocol_current_sample.json  protocol_deck_use_sample.json  protocol_decks_sample.json  protocol_error_sample.json  protocol_rate_sample.json  protocol_status_sample.json  qwerty_cet4_sample.json
crates/fishword-core/src/: error.rs  lib.rs
crates/fishword-core/src/card/: mod.rs
crates/fishword-core/src/deck/: mod.rs
crates/fishword-core/src/importer/: mod.rs
crates/fishword-core/src/protocol/: mod.rs
crates/fishword-core/src/scheduler/: mod.rs
crates/fishword-core/src/selector/: mod.rs
crates/fishword-core/src/storage/: mod.rs
(+429 files in other folders)
