[package]
name = "fishword-cli"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "fishword"
path = "src/main.rs"

[dependencies]
fishword-core = { path = "../fishword-core" }
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
serde         = "1"
serde_json    = "1"
chrono        = "0.4"
ureq          = "3"
