[package]
name = "fishword-core"
version = "0.2.3"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
rusqlite  = { version = "0.39", features = ["bundled"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dirs      = "5"
fsrs = "6.5.0"
chrono = "0.4"
rusqlite_migration = "2.5.0"

[dev-dependencies]
tempfile = "3"
